[gd_scene load_steps=7 format=3 uid="uid://c46cmrgmfm3d3"]

[ext_resource type="PackedScene" path="res://Main/HUD/HUD.tscn" id="1"]
[ext_resource type="PackedScene" path="res://Conversation/Conversation.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://ot6f8q0oyu7k" path="res://GameEngine/Main.tscn" id="4"]
[ext_resource type="Script" path="res://Main/Main.gd" id="5"]
[ext_resource type="Texture2D" uid="uid://by0nrn4xh0r2w" path="res://Main/splash.png" id="6"]
[ext_resource type="AudioStream" uid="uid://dpj8640jqd2on" path="res://Main/theme-music.mp3" id="7"]

[node name="Main" instance=ExtResource("4")]
script = ExtResource("5")

[node name="ColorRect" parent="." index="1"]
offset_left = -3131.0
offset_top = -3036.0
offset_right = 2869.0
offset_bottom = 2964.0
grow_horizontal = 2
grow_vertical = 2

[node name="Splash" type="CanvasLayer" parent="." index="2"]
layer = 3

[node name="Sprite2D" type="Sprite2D" parent="Splash" index="0"]
texture = ExtResource("6")
centered = false

[node name="Timer" type="Timer" parent="Splash" index="1"]

[node name="Music" type="AudioStreamPlayer2D" parent="Splash" index="2"]
stream = ExtResource("7")

[node name="MainMenu" type="CanvasLayer" parent="." index="3"]
layer = 3

[node name="NewGame" type="Button" parent="MainMenu" index="0"]
offset_left = 336.0
offset_top = 432.0
offset_right = 679.0
offset_bottom = 556.0
text = "New Game"

[node name="Load" type="Button" parent="MainMenu" index="1"]
offset_left = 22.0
offset_top = 181.0
offset_right = 365.0
offset_bottom = 305.0
text = "Load Game"

[node name="Save" type="Button" parent="MainMenu" index="2"]
offset_left = 666.0
offset_top = 179.0
offset_right = 1009.0
offset_bottom = 303.0
text = "Save Game"

[node name="Died" type="Label" parent="MainMenu" index="3"]
offset_left = 346.0
offset_top = 104.0
offset_right = 668.0
offset_bottom = 260.0
text = "You died!"

[node name="HUD" parent="." index="4" instance=ExtResource("1")]

[node name="Conversation" parent="." index="5" instance=ExtResource("2")]
offset = Vector2(515, 499)
scale = Vector2(1, 1)
transform = Transform2D(1, 0, 0, 1, 515, 499)

[connection signal="timeout" from="Splash/Timer" to="." method="_on_Splash_Timer_timeout"]
[connection signal="pressed" from="MainMenu/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="MainMenu/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="MainMenu/Save" to="." method="_on_Save_pressed"]
